find top 3 studies instead of threshold approach

--- a/public/index.html
+++ b/public/index.html
@@ -511,7 +511,7 @@
             } else {
                 let resultsHtml = `
                     <h2>📋 Your Research Feed</h2>
-                    <p>Found ${results.length} relevant studies, sorted by relevance:</p>
+                    <p>Here are the top ${results.length} most relevant studies for your interests:</p>
                     <div class="studies-list">
                 `;
                 
